fix overflow

--- a/src/components/Others_form/index.less
+++ b/src/components/Others_form/index.less
@@ -210,6 +210,7 @@
     .circle();
 }
 .circle_three{
+    overflow: auto;
     width: 9.5rem;
     height: 2.32rem;
     .circle();
@@ -233,11 +234,13 @@
     margin-top: 0.32rem;
 }
 .form-detail{
+    overflow: auto;
     position: relative;
     left: 15%;
     width: 6rem;
     height: auto;
     min-height: 0.64rem;
+    max-height: 3rem;
     padding-top: 0.1rem;
     margin-bottom: 0.7rem;
     background-color: #FFFFFF !important;
